Remove dbt user.yml

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ uv.lock
 dbt_project/target/
 dbt_project/dbt_packages/
 dbt_project/logs/
+dbt_project/.user.yml
 
 # Evidence
 evidence_dashboard/node_modules/
